Atomics.h has incorrect GCC test for ext/atomicity.h when using LSB compilers https://bugs.webkit.org/show_bug.cgi?id=51974

Patch by Alvaro Lopez Ortega <alvaro@alobbs.com> on 2012-08-08
Reviewed by Simon Hausmann.

* wtf/Atomics.h: Inhibits the inclusion of the atomicity.h GNU C++
extension when compiling with a LSB compliant compiler. Thanks to
Craig Scott for the new precompiler check code.

Canonical link: https://commits.webkit.org/111318@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125010 268f45cc-cd09-0410-ab3c-d52691b4dbfc